--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
     "next": "9.5.5",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.8",
+    "@types/react": "^16.9.51",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^1.8.13",
+    "typescript": "^4.0.3"
   }
 }
