--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "autoprefixer": "^10.2.1",
     "next": "^10.0.1",
+    "postcss": "^8.2.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "react-tooltip": "^4.2.11"
   },
   "devDependencies": {
     "@types/node": "^14.11.8",
     "@types/react": "^16.9.51",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.8.13",
+    "tailwindcss": "^2.0.2",
     "typescript": "^4.0.3"
   }
 }
