--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-spring": "^8.0.27",
-    "react-tooltip": "^4.2.11"
+    "react-tooltip": "^4.2.11",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^14.11.8",
     "@types/react": "^16.9.51",
+    "@types/styled-components": "^5.1.7",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.0.3"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
