--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^14.11.8",
     "@types/react": "^16.9.51",
     "@types/styled-components": "^5.1.7",
+    "babel-plugin-styled-components": "^1.12.0",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^2.0.2",
