--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^10.0.5",
     "autoprefixer": "^10.2.1",
     "next": "^10.0.1",
     "postcss": "^8.2.4",
