--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-spring": "^8.0.27",
+    "react-toggle-dark-mode": "^1.0.3",
     "react-tooltip": "^4.2.11",
     "styled-components": "^5.2.1"
   },
