--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@headlessui/react": "^1.7.4",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.0.5",
     "autoprefixer": "^10.2.1",
