--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8",
     "@types/node": "^14.11.8",
     "@types/react": "^18.0.25",
     "@types/styled-components": "^5.1.7",
     "babel-plugin-styled-components": "^1.12.0",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^2.0.2",
+    "tailwindcss": "^3.2.2",
     "typescript": "^4.8.4"
   },
   "resolutions": {
