--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.0.5",
     "autoprefixer": "^10.2.1",
+    "gray-matter": "^4.0.3",
     "next": "12",
     "postcss": "^8.2.4",
     "react": "^18.2.0",
@@ -28,6 +29,7 @@
     "@types/react": "^18.0.25",
     "@types/styled-components": "^5.1.7",
     "babel-plugin-styled-components": "^1.12.0",
+    "next-mdx-remote": "^4.2.0",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^3.2.2",
