--- a/package.json
+++ b/package.json
@@ -9,27 +9,31 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@headlessui/react": "^1.7.4",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.0.5",
     "autoprefixer": "^10.2.1",
-    "next": "^10.0.1",
+    "gray-matter": "^4.0.3",
+    "next": "12",
     "postcss": "^8.2.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-spring": "^8.0.27",
     "react-toggle-dark-mode": "^1.0.3",
     "react-tooltip": "^4.2.11",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8",
     "@types/node": "^14.11.8",
-    "@types/react": "^16.9.51",
+    "@types/react": "^18.0.25",
     "@types/styled-components": "^5.1.7",
     "babel-plugin-styled-components": "^1.12.0",
+    "next-mdx-remote": "^4.2.0",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^2.0.2",
-    "typescript": "^4.0.3"
+    "tailwindcss": "^3.2.2",
+    "typescript": "^4.8.4"
   },
   "resolutions": {
     "styled-components": "^5"
